--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/PC/Documents/Bart/schweb/voxel_engine_tutorial_series/assets/lwjgl-2.9.1/jar/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/PC/Documents/Bart/schweb/voxel_engine_tutorial_series/assets/lwjgl-2.9.1/native/windows"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/PC/Documents/Bart/schweb/voxel_engine_tutorial_series/assets/lwjgl-2.9.1/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Documents/Bart/schweb/voxel_engine_tutorial_series/assets/lwjgl-2.9.1/jar/PNGDecoder.jar"/>
+	<classpathentry kind="lib" path="C:/Users/PC/Documents/Bart/schweb/voxel_engine_tutorial_series/assets/lwjgl-2.9.1/jar/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
